--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,10 +12,10 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Manual S3 Sync
-        run: |
-          aws s3 sync . s3://my-static-web-project-123 --delete --exclude ".git/*" --exclude ".github/*"
+      - name: Deploy to S3
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: 'ap-south-1'
+        run: |
+          aws s3 sync . s3://my-static-web-project-123 --delete --exclude ".git/*" --exclude ".github/*"
